--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/lab": "^5.0.0-alpha.134",
     "@mui/material": "^5.12.3",
     "@mui/x-data-grid": "^6.13.0",
+    "@react-oauth/google": "^0.12.2",
     "@react-pdf/renderer": "^4.0.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
